--- a/index.html
+++ b/index.html
@@ -8,27 +8,32 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       min-height: 100vh;
       font-family: 'Poppins', sans-serif;
-      background-image: url("./background.png");
+      background-image: url("background.png");
       background-size: cover;
       background-position: center;
+      background-repeat: no-repeat;
       background-attachment: fixed;
+
       display: flex;
       justify-content: center;
       align-items: center;
       color: #ffffff;
-      overflow-x: hidden;
     }
 
-    /* Soft dark overlay so text is readable */
+    /* Dark overlay so text stays readable */
     body::before {
       content: "";
       position: fixed;
       inset: 0;
-      background: rgba(0, 0, 0, 0.35);
+      background: rgba(0,0,0,0.35);
       z-index: -1;
     }
 
@@ -36,24 +41,27 @@
       background: rgba(0, 0, 0, 0.55);
       backdrop-filter: blur(14px);
       border-radius: 20px;
-      padding: 40px 45px;
-      width: 90%;
+      padding: 42px 36px;
+      width: 92%;
       max-width: 850px;
       text-align: center;
-      box-shadow: 0 15px 50px rgba(0,0,0,0.6);
+      box-shadow: 0 20px 60px rgba(0,0,0,0.6);
     }
 
-    h2 {
-      font-weight: 400;
-      letter-spacing: 0.6px;
-      margin-bottom: 20px;
+    .title {
+      font-weight: 300;
+      letter-spacing: 0.8px;
+      margin-bottom: 28px;
+      font-size: 20px;
+      line-height: 1.5;
+      opacity: 0.96;
     }
 
     input {
-      width: 85%;
+      width: 90%;
       max-width: 340px;
-      padding: 12px 14px;
-      border-radius: 8px;
+      padding: 14px 14px;
+      border-radius: 10px;
       border: none;
       outline: none;
       font-size: 16px;
@@ -61,30 +69,31 @@
     }
 
     button {
-      margin-top: 15px;
-      padding: 12px 32px;
-      border-radius: 8px;
+      margin-top: 18px;
+      padding: 12px 34px;
+      border-radius: 10px;
       border: none;
       font-size: 15px;
       cursor: pointer;
       background: #ffffff;
       color: #222;
-      transition: 0.3s ease;
+      transition: all 0.25s ease;
     }
 
     button:hover {
-      transform: translateY(-1px);
-      background: #f0f0f0;
+      transform: translateY(-2px);
+      background: #f1f1f1;
     }
 
     #status {
       margin-top: 15px;
       font-size: 14px;
       opacity: 0.9;
+      min-height: 18px;
     }
 
     #message {
-      margin-top: 30px;
+      margin-top: 34px;
       white-space: pre-wrap;
       text-align: left;
       line-height: 1.7;
@@ -94,13 +103,23 @@
     }
 
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(12px); }
-      to { opacity: 1; transform: translateY(0); }
+      from { 
+        opacity: 0; 
+        transform: translateY(12px); 
+      }
+      to { 
+        opacity: 1; 
+        transform: translateY(0); 
+      }
     }
 
     @media (max-width: 600px) {
       .card {
-        padding: 28px 25px;
+        padding: 30px 22px;
+      }
+
+      .title {
+        font-size: 17px;
       }
     }
   </style>
@@ -109,7 +128,10 @@
 <body>
 
   <div class="card">
-    <h2>Sneha, my gomluu , i know , i know .. yeah have patience just a message(maybe not)</h2>
+    <div class="title">
+      Sneha, my gomluu , i know , i know .. yeah have patience<br>
+      just a message (maybe not)
+    </div>
 
     <input type="password" id="password" placeholder="Enter password" />
     <br>
@@ -119,66 +141,66 @@
     <div id="message"></div>
   </div>
 
-<script src="https://cdn.jsdelivr.net/npm/crypto-js@4.1.1/crypto-js.min.js"></script>
+  <!-- CryptoJS -->
+  <script src="https://cdn.jsdelivr.net/npm/crypto-js@4.1.1/crypto-js.min.js"></script>
 
-<script>
-const FIREBASE_URL = "https://sneha-e034a-default-rtdb.asia-southeast1.firebasedatabase.app";
+  <script>
+    const FIREBASE_URL = "https://sneha-e034a-default-rtdb.asia-southeast1.firebasedatabase.app";
 
-async function unlock() {
-  const inputPassword = document.getElementById("password").value;
-  const status = document.getElementById("status");
-  const messageBox = document.getElementById("message");
+    async function unlock() {
+      const inputPassword = document.getElementById("password").value.trim();
+      const status = document.getElementById("status");
 
-  if (!inputPassword) {
-    status.innerText = "Please enter the password.";
-    return;
-  }
+      if (!inputPassword) {
+        status.innerText = "Please enter the password.";
+        return;
+      }
 
-  try {
-    const res = await fetch(FIREBASE_URL + "/.json");
-    const data = await res.json();
+      status.innerText = "Checking password...";
 
-    if (!data || !data.passwordHash || !data.encryptedMessage) {
-      status.innerText = "Database error.";
-      return;
+      try {
+        const res = await fetch(FIREBASE_URL + "/.json");
+        const data = await res.json();
+
+        if (!data) {
+          status.innerText = "Database not reachable.";
+          return;
+        }
+
+        const hash = CryptoJS.SHA256(inputPassword).toString();
+
+        if (hash !== data.passwordHash) {
+          status.innerText = "Incorrect password.";
+          return;
+        }
+
+        // Increment views safely
+        const views = data.views?.count || 0;
+        await fetch(FIREBASE_URL + "/views/count.json", {
+          method: "PUT",
+          body: JSON.stringify(views + 1)
+        });
+
+        // Decrypt message
+        const decrypted = CryptoJS.AES.decrypt(
+          data.encryptedMessage,
+          inputPassword
+        ).toString(CryptoJS.enc.Utf8);
+
+        if (!decrypted) {
+          status.innerText = "Decryption failed.";
+          return;
+        }
+
+        document.getElementById("message").innerText = decrypted;
+        status.innerText = "Unlocked ❤️";
+
+      } catch (err) {
+        console.error(err);
+        status.innerText = "Something went wrong.";
+      }
     }
-
-    // Hash password
-    const hash = CryptoJS.SHA256(inputPassword).toString();
-
-    if (hash !== data.passwordHash) {
-      status.innerText = "Incorrect password.";
-      return;
-    }
-
-    // Increment views safely
-    const views = data.views?.count || 0;
-    await fetch(FIREBASE_URL + "/views/count.json", {
-      method: "PUT",
-      body: JSON.stringify(views + 1)
-    });
-
-    // Decrypt message
-    const decrypted = CryptoJS.AES.decrypt(
-      data.encryptedMessage,
-      inputPassword
-    ).toString(CryptoJS.enc.Utf8);
-
-    if (!decrypted) {
-      status.innerText = "Decryption failed.";
-      return;
-    }
-
-    messageBox.innerText = decrypted;
-    messageBox.style.opacity = 1;
-    status.innerText = "Unlocked.";
-
-  } catch (err) {
-    console.error(err);
-    status.innerText = "Connection error.";
-  }
-}
-</script>
+  </script>
 
 </body>
 </html>
