--- a/index.html
+++ b/index.html
@@ -4,23 +4,18 @@
   <title>Private Message</title>
   <meta charset="UTF-8">
 
-  <!-- Google Font -->
+  <!-- Modern Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     body {
       margin: 0;
       min-height: 100vh;
       font-family: 'Poppins', sans-serif;
-      background-image: url("background.png");
+
+      /* YOUR BACKGROUND IMAGE */
+      background: url("background.png") no-repeat center center fixed;
       background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
 
       display: flex;
       justify-content: center;
@@ -28,40 +23,28 @@
       color: #ffffff;
     }
 
-    /* Dark overlay so text stays readable */
-    body::before {
-      content: "";
-      position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.35);
-      z-index: -1;
-    }
-
     .card {
       background: rgba(0, 0, 0, 0.55);
-      backdrop-filter: blur(14px);
+      backdrop-filter: blur(10px);
       border-radius: 20px;
-      padding: 42px 36px;
-      width: 92%;
+      padding: 40px;
+      width: 90%;
       max-width: 850px;
       text-align: center;
-      box-shadow: 0 20px 60px rgba(0,0,0,0.6);
+      box-shadow: 0 0 40px rgba(0,0,0,0.6);
     }
 
-    .title {
-      font-weight: 300;
-      letter-spacing: 0.8px;
-      margin-bottom: 28px;
-      font-size: 20px;
-      line-height: 1.5;
-      opacity: 0.96;
+    h2 {
+      font-weight: 400;
+      letter-spacing: 0.5px;
+      margin-bottom: 25px;
     }
 
     input {
-      width: 90%;
+      width: 80%;
       max-width: 340px;
-      padding: 14px 14px;
-      border-radius: 10px;
+      padding: 12px;
+      border-radius: 8px;
       border: none;
       outline: none;
       font-size: 16px;
@@ -70,18 +53,18 @@
 
     button {
       margin-top: 18px;
-      padding: 12px 34px;
-      border-radius: 10px;
+      padding: 12px 32px;
+      border-radius: 8px;
       border: none;
       font-size: 15px;
       cursor: pointer;
       background: #ffffff;
       color: #222;
-      transition: all 0.25s ease;
+      transition: 0.3s ease;
     }
 
     button:hover {
-      transform: translateY(-2px);
+      transform: translateY(-1px);
       background: #f1f1f1;
     }
 
@@ -89,118 +72,107 @@
       margin-top: 15px;
       font-size: 14px;
       opacity: 0.9;
-      min-height: 18px;
     }
 
     #message {
-      margin-top: 34px;
+      margin-top: 30px;
       white-space: pre-wrap;
       text-align: left;
       line-height: 1.7;
       font-size: 16px;
-      opacity: 0;
-      animation: fadeIn 1.5s forwards;
+      display: none;
+      max-height: 60vh;
+      overflow-y: auto;
+      padding-right: 10px;
     }
 
-    @keyframes fadeIn {
-      from { 
-        opacity: 0; 
-        transform: translateY(12px); 
-      }
-      to { 
-        opacity: 1; 
-        transform: translateY(0); 
-      }
-    }
-
-    @media (max-width: 600px) {
-      .card {
-        padding: 30px 22px;
-      }
-
-      .title {
-        font-size: 17px;
-      }
+    .heart {
+      color: #ff6b81;
     }
   </style>
 </head>
 
 <body>
 
-  <div class="card">
-    <div class="title">
-      Sneha, my gomluu , i know , i know .. yeah have patience<br>
-      just a message (maybe not)
-    </div>
+<div class="card">
 
+  <h2>
+    Sneha, my gomluu , i know , i know .. yeah have patience  
+    just a message (maybe not)
+  </h2>
+
+  <div id="lockArea">
     <input type="password" id="password" placeholder="Enter password" />
     <br>
     <button onclick="unlock()">Unlock</button>
-
-    <div id="status"></div>
-    <div id="message"></div>
   </div>
 
-  <!-- CryptoJS -->
-  <script src="https://cdn.jsdelivr.net/npm/crypto-js@4.1.1/crypto-js.min.js"></script>
+  <div id="status"></div>
+  <div id="message"></div>
 
-  <script>
-    const FIREBASE_URL = "https://sneha-e034a-default-rtdb.asia-southeast1.firebasedatabase.app";
+</div>
 
-    async function unlock() {
-      const inputPassword = document.getElementById("password").value.trim();
-      const status = document.getElementById("status");
+<script src="https://cdn.jsdelivr.net/npm/crypto-js@4.1.1/crypto-js.min.js"></script>
 
-      if (!inputPassword) {
-        status.innerText = "Please enter the password.";
-        return;
-      }
+<script>
+const FIREBASE_URL =
+  "https://sneha-e034a-default-rtdb.asia-southeast1.firebasedatabase.app";
 
-      status.innerText = "Checking password...";
+async function unlock() {
+  const inputPassword = document.getElementById("password").value.trim();
+  const status = document.getElementById("status");
+  const messageBox = document.getElementById("message");
 
-      try {
-        const res = await fetch(FIREBASE_URL + "/.json");
-        const data = await res.json();
+  if (!inputPassword) {
+    status.innerText = "Please enter the password.";
+    return;
+  }
 
-        if (!data) {
-          status.innerText = "Database not reachable.";
-          return;
-        }
+  try {
+    const res = await fetch(FIREBASE_URL + "/.json");
+    const data = await res.json();
 
-        const hash = CryptoJS.SHA256(inputPassword).toString();
-
-        if (hash !== data.passwordHash) {
-          status.innerText = "Incorrect password.";
-          return;
-        }
-
-        // Increment views safely
-        const views = data.views?.count || 0;
-        await fetch(FIREBASE_URL + "/views/count.json", {
-          method: "PUT",
-          body: JSON.stringify(views + 1)
-        });
-
-        // Decrypt message
-        const decrypted = CryptoJS.AES.decrypt(
-          data.encryptedMessage,
-          inputPassword
-        ).toString(CryptoJS.enc.Utf8);
-
-        if (!decrypted) {
-          status.innerText = "Decryption failed.";
-          return;
-        }
-
-        document.getElementById("message").innerText = decrypted;
-        status.innerText = "Unlocked ❤️";
-
-      } catch (err) {
-        console.error(err);
-        status.innerText = "Something went wrong.";
-      }
+    if (!data || !data.passwordHash || !data.encryptedMessage) {
+      status.innerText = "Database error.";
+      return;
     }
-  </script>
+
+    const hash = CryptoJS.SHA256(inputPassword).toString();
+
+    if (hash !== data.passwordHash) {
+      status.innerText = "Incorrect password.";
+      return;
+    }
+
+    // Increment views safely
+    const views = data.views?.count || 0;
+    await fetch(FIREBASE_URL + "/views/count.json", {
+      method: "PUT",
+      body: JSON.stringify(views + 1)
+    });
+
+    // Decrypt message
+    const decrypted = CryptoJS.AES.decrypt(
+      data.encryptedMessage,
+      inputPassword
+    ).toString(CryptoJS.enc.Utf8);
+
+    if (!decrypted) {
+      status.innerText = "Decryption failed.";
+      return;
+    }
+
+    document.getElementById("lockArea").style.display = "none";
+    messageBox.style.display = "block";
+    messageBox.innerText = decrypted;
+    status.innerHTML = 'Unlocked <span class="heart">❤️</span>';
+
+  } catch (err) {
+    console.error(err);
+    status.innerText = "Something went wrong.";
+  }
+}
+</script>
 
 </body>
 </html>
