Update status message for unlocking

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ async function unlock() {
     document.getElementById("lockArea").style.display = "none";
     messageBox.style.display = "block";
     messageBox.innerText = decrypted;
-    status.innerHTML = 'Unlocked <span class="heart">❤️</span>';
+    status.innerHTML = 'Sorry i made you go through all of this for this shit <span class="heart">❤️</span>';
 
   } catch (err) {
     console.error(err);
