Update fetch call to include timestamp in query
Add timestamp query parameter to Firebase URL fetch

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ async function unlock() {
   }
 
   try {
-    const res = await fetch(FIREBASE_URL + "/.json");
+    const res = await fetch(FIREBASE_URL + "/.json?ts=" + Date.now());
     const data = await res.json();
 
     if (!data || !data.passwordHash || !data.encryptedMessage) {
